newtype-tools/tests/trybuild/newtype/struct-list-invalid.stderr
error: expected identifier
 --> tests/trybuild/newtype/struct-list-invalid.rs:2:11
  |
2 | #[newtype(;)]
  |           ^
