newtype-tools/tests/trybuild/newtype/struct-list-invalid.rs
#[derive(newtype_tools::Newtype)]
#[newtype(;)]
struct Oranges(u32);

fn main() {}
